fixup! cli tests
Signed-off-by: Sam Gammon <sam@elide.dev>